Name:                gitlib
Version:             0.3.0
Synopsis:            Higher-level types for working with hlibgit2
Description:         Higher-level types for working with hlibgit2
License-file:        LICENSE
License:             MIT
Author:              John Wiegley
Maintainer:          johnw@newartisans.com
Build-Type:          Simple
Cabal-Version:       >=1.10
Category:            FFI

Source-repository head
  type: git
  location: git://github.com/jwiegley/gitlib.git

Test-suite smoke
  default-language: Haskell98
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
      base >=3
    , gitlib
    , HUnit           >= 1.2.5
    , bytestring      >= 0.9.2.1
    , containers      >= 0.4.2
    , lens            >= 2.8
    , stringable      >= 0.1.1
    , system-fileio   >= 0.3.9
    , system-filepath >= 0.4.7
    , text            >= 0.11.2
    , time            >= 1.4

test-suite doctests
  default-language: Haskell98
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  build-depends:
      base == 4.*
    , directory >= 1.0 && < 1.2
    , doctest   >= 0.8 && <= 0.10
    , filepath  >= 1.3 && < 1.4
  ghc-options: -Wall -Werror
  hs-source-dirs: test

Library
  default-language: Haskell98
  default-extensions:
    ForeignFunctionInterface
  build-depends:
      base            >= 3 && < 5
    , hlibgit2        >= 0.6
    , bytestring      >= 0.9.2.1
    , containers      >= 0.4.2
    , lens            >= 2.8
    , stringable      >= 0.1.1
    , system-fileio   >= 0.3.9
    , system-filepath >= 0.4.7
    , text            >= 0.11.2
    , text-icu        >= 0.6.3
    , time            >= 1.4
  exposed-modules:
    Data.Git
    Data.Git.Blob
    Data.Git.Commit
    Data.Git.Common
    Data.Git.Errors
    Data.Git.Object
    Data.Git.Oid
    Data.Git.Repository
    Data.Git.Tag
    Data.Git.Tree
    Data.Git.Reference
  other-modules:
    Data.Git.Internal
