Name:                hlibgit2-s3
Version:             0.0.2
Synopsis:            A repository backend for storing Git objects in Amazon S3
Description:         A repository backend for storing Git objects in Amazon S3.
License-file:        LICENSE
License:             MIT
Author:              John Wiegley
Maintainer:          johnw@fpcomplete.com
Build-Type:          Simple
Cabal-Version:       >=1.10
Category:            Git

Source-repository head
  type: git
  location: git://github.com/jwiegley/hlibgit2-s3.git

-- Test-suite smoke
--   default-language: Haskell98
--   type: exitcode-stdio-1.0
--   main-is: Main.hs
--   hs-source-dirs: test
--   build-depends:
--       base >=3
--     , process

Library
  hs-source-dirs: .
  default-language: Haskell98
  build-depends:
      base            >= 3 && < 5
    , hlibgit2
    , bytestring      >= 0.9.2.1
    , aws             >= 0.7.5
    , http-conduit    >= 1.8.5.1
    , text            >= 0.11.2.3
  exposed-modules:
    Data.Git.Backend.S3
