Name:                hlibgit2
Version:             0.5.0
Synopsis:            Low-level bindings to libgit2.
Description:         Bindings to libgit2 v0.16.0-471-g5b9fac3
License-file:        LICENSE
License:             MIT
Author:              Sakari Jokinen, Jacob Stanley, John Wiegley
Maintainer:          johnw@newartisans.com
Build-Type:          Simple
Cabal-Version:       >=1.10
Category:            FFI

Extra-source-files:
  libgit2/include/git2.h
  libgit2/include/git2/*.h

Source-repository head
  type: git
  location: git://github.com/jwiegley/hlibgit2.git

Source-repository this
  type: git
  location: git://github.com/jwiegley/hlibgit2.git
  tag: hlibgit2-0.1-17-gd7b22d6

Test-suite smoke
  default-language: Haskell98
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: tests
  build-depends:
      base >=3
    , hlibgit2
    , process
    , system-filepath >= 0.4.7
    , system-fileio   >= 0.3.9
    , time            >= 1.4
    , text            >= 0.11.2
    , containers      >= 0.4.2
    , bytestring      >= 0.9.2.1
    , lens            >= 2.8

Library
  default-language: Haskell98
  default-extensions:
    ForeignFunctionInterface
  build-depends:
      base            >= 3 && < 5
    , bindings-DSL    >= 1.0.11
    , system-filepath >= 0.4.7
    , system-fileio   >= 0.3.9
    , time            >= 1.4
    , text            >= 0.11.2
    , containers      >= 0.4.2
    , bytestring      >= 0.9.2.1
    , lens            >= 2.8
  exposed-modules:
    Bindings.Libgit2
    Bindings.Libgit2.Attr
    Bindings.Libgit2.Blob
    Bindings.Libgit2.Branch
    Bindings.Libgit2.Commit
    Bindings.Libgit2.Common
    Bindings.Libgit2.Config
    Bindings.Libgit2.Diff
    Bindings.Libgit2.Errors
    Bindings.Libgit2.Index
    Bindings.Libgit2.Indexer
    Bindings.Libgit2.Merge
    Bindings.Libgit2.Net
    Bindings.Libgit2.Notes
    Bindings.Libgit2.Object
    Bindings.Libgit2.Odb
    Bindings.Libgit2.OdbBackend
    Bindings.Libgit2.Oid
    Bindings.Libgit2.Reflog
    Bindings.Libgit2.Refs
    Bindings.Libgit2.Refspec
    Bindings.Libgit2.Remote
    Bindings.Libgit2.Repository
    Bindings.Libgit2.Revwalk
    Bindings.Libgit2.Signature
    Bindings.Libgit2.Status
    Bindings.Libgit2.Submodule
    Bindings.Libgit2.Tag
    Bindings.Libgit2.Threads
    Bindings.Libgit2.Tree
    Bindings.Libgit2.Types
    Bindings.Libgit2.Version
    Bindings.Libgit2.Windows
    Data.Git
    Data.Git.Blob
    Data.Git.Commit
    Data.Git.Common
    Data.Git.Errors
    Data.Git.Object
    Data.Git.Oid
    Data.Git.Repository
    Data.Git.Tag
    Data.Git.Tree
  other-modules:
    Data.Git.Internal
    Data.Git.Stringable
  c-sources:
    src/Bindings/Libgit2/Attr.hsc.helper.c
    src/Bindings/Libgit2/Blob.hsc.helper.c
    src/Bindings/Libgit2/Commit.hsc.helper.c
    src/Bindings/Libgit2/Common.hsc.helper.c
    src/Bindings/Libgit2/Tag.hsc.helper.c
    src/Bindings/Libgit2/Tree.hsc.helper.c

  hs-source-dirs: src
  include-dirs: libgit2/include
  extra-libraries: git2
  if os(windows)
    cc-options: -DGIT_WIN32 -DNO_VIZ
