Name:    git-gpush
Version: 1.4.0

Synopsis:    More intelligent push-to-GitHub utility.
Description: More intelligent push-to-GitHub utility.

Homepage:           git://github.com/fpco/gitlib
License:            BSD3
License-file:       LICENSE
Author:             John Wiegley
Maintainer:         John Wiegley <johnw@fpcomplete.com>
Category:           Development
Build-type:         Simple
Cabal-version:      >= 1.10

Extra-Source-Files: README.md

Executable git-gpush
    Main-is: Main.hs
    Default-language: Haskell2010
    ghc-options: -Wall

    Build-depends: base                 >= 4 && < 5
                 , bytestring           >= 0.9.2.1
                 , containers           >= 0.4.2.1
                 , gitlib               >= 1.4.0
                 , gitlib-libgit2       >= 1.4.0
                 , hslogger             >= 1.2
                 , old-locale           >= 1.0.0.4
                 , optparse-applicative >= 0.5.2.1
                 , shelly               >= 0.14
                 , system-fileio        >= 0.3.11
                 , system-filepath      >= 0.4.7
                 , tagged               >= 0.4.5
                 , text                 >= 0.11.2
                 , time                 >= 1.4
                 , transformers         >= 0.3.0.0

Source-repository head
  type:     git
  location: git://github.com/fpco/gitlib
