Name:    git-monitor
Version: 3.0.1

Synopsis:    Passively snapshots working tree changes efficiently.
Description: Passively snapshots working tree changes efficiently.

Homepage:           http://github.com/fpco/gitlib
License:            BSD3
License-file:       LICENSE
Author:             John Wiegley
Maintainer:         John Wiegley <johnw@fpcomplete.com>
Category:           Development
Build-type:         Simple
Cabal-version:      >= 1.10

Extra-Source-Files: README.md

Executable git-monitor
    Main-is: Main.hs
    Default-language: Haskell2010
    ghc-options: -Wall

    Build-depends: base                 >= 4 && < 5
                 , gitlib               >= 3.0.0
                 , gitlib-libgit2       >= 3.0.0
                 , bytestring           >= 0.9.2.1
                 , containers           >= 0.4.2.1
                 , directory            >= 1.1.0.2
                 , fast-logger          >= 2.1
                 , filepath             >= 1.3.0.0
                 , hslogger             >= 1.2
                 , monad-logger
                 , old-locale           >= 1.0.0.4
                 , optparse-applicative >= 0.5.2.1
                 , shelly               >= 0.14
                 , tagged               >= 0.4.5
                 , template-haskell
                 , text                 >= 0.11.2
                 , time                 >= 1.4
                 , transformers         >= 0.3.0.0
                 , unix

Source-repository head
  type:     git
  location: git://github.com/fpco/gitlib
