Name:    git-monitor
Version: 3.1.1.4

Synopsis:    Passively snapshots working tree changes efficiently.
Description: Passively snapshots working tree changes efficiently.

Homepage:           http://github.com/jwiegley/gitlib
License:            BSD3
License-file:       LICENSE
Author:             John Wiegley
Maintainer:         John Wiegley <johnw@newartisans.com>
Category:           Development
Build-type:         Simple
Cabal-version:      >= 1.10

Extra-Source-Files: README.md

Executable git-monitor
    Main-is: Main.hs
    Default-language: Haskell2010
    ghc-options: -Wall -threaded -rtsopts

    Build-depends: base                 >= 4 && < 5
                 , gitlib               >= 3.0.1
                 , gitlib-libgit2       >= 3.0.0
                 , bytestring           >= 0.9.2.1
                 , containers           >= 0.4.2.1
                 , directory            >= 1.1.0.2
                 , logging              >= 1.3.0
                 , filepath             >= 1.3.0.0
                 , monad-logger
                 , old-locale           >= 1.0.0.4
                 , optparse-applicative >= 0.10
                 , shelly               >= 0.14
                 , tagged               >= 0.4.5
                 , template-haskell
                 , text                 >= 0.11.2
                 , time                 >= 1.4
                 , transformers         >= 0.3.0.0
                 , unordered-containers >= 0.2.3.0
                 , lifted-async         >= 0.1.1
                 , unix

Source-repository head
  type:     git
  location: git://github.com/jwiegley/gitlib
