Name:                gitlib-cli
Version:             0.1.0.0
Synopsis:            Gitlib repository backend that uses the git command-line tool.
Description:         Gitlib repository backend that uses the git command-line tool.
License-file:        LICENSE
License:             MIT
Author:              John Wiegley
Maintainer:          johnw@fpcomplete.com
Build-Type:          Simple
Cabal-Version:       >=1.10
Category:            Git

Source-repository head
  type: git
  location: git://github.com/fpco/gitlib.git

Library
  hs-source-dirs: .
  default-language: Haskell98
  build-depends:
      base >= 3 && < 5
    , gitlib
    , conduit              >= 0.5.5
    , failure              >= 0.2.0.1
    , old-locale           >= 1.0.0.4
    , parsec               >= 3.1.3
    , shelly               >= 0.14.3
    , system-fileio        >= 0.3.11
    , system-filepath      >= 0.4.7
    , tagged               >= 0.4.4
    , time                 >= 1.4.0.1
    , text                 >= 0.11.2
    , transformers         >= 0.2.2
    , transformers-base    >= 0.4.1
    , unordered-containers >= 0.2.3.0
  exposed-modules:
    Git.CmdLine

Test-suite smoke
  default-language: Haskell98
  type: exitcode-stdio-1.0
  main-is: Smoke.hs
  hs-source-dirs: test
  build-depends:
      base >=3
    , gitlib
    , gitlib-test
    , gitlib-cli
    , HUnit              >= 1.2.5
    , hspec              >= 1.4.4
    , hspec-expectations >= 0.3
    , system-filepath    >= 0.4.7
    , text               >= 0.11.2
    , transformers       >= 0.2.2
