Name:                gitlib-cmdline
Version:             3.0.0
Synopsis:            Gitlib repository backend that uses the git command-line tool.
Description:         Gitlib repository backend that uses the git command-line tool.
License-file:        LICENSE
License:             MIT
Author:              John Wiegley
Maintainer:          johnw@fpcomplete.com
Build-Type:          Simple
Cabal-Version:       >=1.10
Category:            Git

Source-repository head
  type: git
  location: git://github.com/fpco/gitlib.git

Library
  hs-source-dirs: .
  default-language: Haskell98
  ghc-options: -Wall
  build-depends:
      base >= 3 && < 5
    , gitlib               >= 3.0.0
    , bytestring           >= 0.9.2.1
    , conduit              >= 0.5.5
    , containers           >= 0.4.2.1
    , directory            >= 1.1.0.2
    , failure              >= 0.2.0.1
    , monad-control        >= 0.3.2
    , mtl                  >= 2.1.2
    , old-locale           >= 1.0.0.4
    , parsec               >= 3.1.3
    , process-extras       >= 0.2.0
    , shelly               >= 0.14
    , system-filepath      >= 0.4.7
    , tagged               >= 0.4.4
    , time                 >= 1.4
    , text                 >= 0.11.2
    , transformers         >= 0.2.2
    , transformers-base    >= 0.4.1
    , unordered-containers >= 0.2.3.0
  exposed-modules:
    Git.CmdLine

Test-suite smoke
  default-language: Haskell98
  type: exitcode-stdio-1.0
  main-is: Smoke.hs
  ghc-options: -Wall
  hs-source-dirs: test
  build-depends:
      base >=3
    , gitlib             >= 3.0.0
    , gitlib-test        >= 3.0.0
    , gitlib-cmdline     >= 3.0.0
    , hspec              >= 1.4.4
    , hspec-expectations >= 0.3
    , system-filepath    >= 0.4.7
    , tagged             >= 0.2.3.1
    , text               >= 0.11.2
    , transformers       >= 0.2.2
