Name:                gitlib-cross
Version:             3.0.0
Synopsis:            Run tests between repositories
License-file:        LICENSE
License:             MIT
Author:              John Wiegley
Maintainer:          johnw@fpcomplete.com
Build-Type:          Simple
Cabal-Version:       >=1.10
Category:            FFI
Description:
  Test runner which runs tests between repositories.

Source-repository head
  type: git
  location: git://github.com/fpco/gitlib.git


Library
    ghc-options: -Wall
    default-language:   Haskell98
    default-extensions: ForeignFunctionInterface
    build-depends:
          base                 >= 3 && < 5
    exposed-modules:
        Foo

Test-suite smoke
    Default-language: Haskell98
    Type: exitcode-stdio-1.0
    Main-is: Smoke.hs
    ghc-options: -Wall
    Hs-source-dirs: test
    Build-depends: 
          base >=3
        , gitlib             >= 3.0.0
        , gitlib-test        >= 3.0.0
        , gitlib-libgit2     >= 3.0.0
        , gitlib-cmdline     >= 3.0.0
        , HUnit              >= 1.2.5
        , hspec              >= 1.4.4
        , hspec-expectations >= 0.3
