Name:                gitlib-github
Version:             0.1.0.0
Synopsis:            A repository backend for storing Git objects on GitHub.
Description:         A repository backend for storing Git objects on GitHub.
License-file:        LICENSE
License:             MIT
Author:              John Wiegley
Maintainer:          johnw@fpcomplete.com
Build-Type:          Simple
Cabal-Version:       >=1.10
Category:            Git

Source-repository head
  type: git
  location: git://github.com/fpco/gitlib.git

Library
  hs-source-dirs: .
  default-language: Haskell98
  build-depends:
      base              >= 3 && < 5
    , gitlib
    , hlibgit2          >= 0.17
    , aeson             >= 0.6.1.0
    , attempt           >= 0.4.0
    , attempt           >= 0.4.0
    , base64-bytestring >= 1.0.0.0
    , binary            >= 0.5.1.0
    , bytestring        >= 0.9.2.1
    , conduit           >= 0.5.5
    , containers        >= 0.4.2
    , data-default      >= 0.5.0
    , data-marshal      >= 0.1
    , http-conduit      >= 1.8.5.1
    , lens              >= 2.8
    , network           >= 2.4.0.1
    , parallel-io       >= 0.3.2.1
    , rest-client       >= 0.1.0.0
    , shakespeare-text  >= 1.0.0.5
    , stringable        >= 0.1.1
    , system-fileio     >= 0.3.9
    , system-filepath   >= 0.4.7
    , tagged            >= 0.4.4
    , text              >= 0.11.2
    , time              >= 1.4
    , transformers      >= 0.2.2
    , yaml              >= 0.8.1.1
  exposed-modules:
    Data.Git.Backend.GitHub

Test-suite smoke
  default-language: Haskell98
  type: exitcode-stdio-1.0
  main-is: Smoke.hs
  hs-source-dirs: test
  build-depends:
      base >=3
    , gitlib-github
    , gitlib
    , hlibgit2        >= 0.17
    , HUnit           >= 1.2.5
    , bytestring      >= 0.9.2.1
    , containers      >= 0.4.2
    , http-conduit    >= 1.8.5.1
    , lens            >= 2.8
    , parallel-io     >= 0.3.2.1
    , rest-client     >= 0.1.0.0
    , stringable      >= 0.1.1
    , system-fileio   >= 0.3.9
    , system-filepath >= 0.4.7
    , text            >= 0.11.2
    , time            >= 1.4
