Name:                gitlib-github
Version:             0.1.0.0
Synopsis:            Gitlib repository backend for storing Git objects on GitHub.
Description:         Gitlib repository backend for storing Git objects on GitHub.
License-file:        LICENSE
License:             MIT
Author:              John Wiegley
Maintainer:          johnw@fpcomplete.com
Build-Type:          Simple
Cabal-Version:       >=1.10
Category:            Git

Source-repository head
  type: git
  location: git://github.com/fpco/gitlib.git

Library
  hs-source-dirs: .
  default-language: Haskell98
  build-depends:
      base >= 3 && < 5
    , gitlib
    , aeson                >= 0.6.1.0
    , attempt              >= 0.4.0
    , base64-bytestring    >= 1.0.0.0
    , binary               >= 0.5.1.0
    , bytestring           >= 0.9.2.1
    , conduit              >= 0.5.5
    , containers           >= 0.4.2
    , data-default         >= 0.5.0
    , failure              >= 0.2.0.1
    , github               >= 0.5.0
    , hex                  >= 0.1.2
    , http-conduit         >= 1.8.5.1
    , network              >= 2.4.0.1
    , old-locale           >= 1.0.0.4
    , rest-client          >= 0.1.0.0
    , shakespeare-text     >= 1.0.0.5
    , stringable           >= 0.1.1
    , system-filepath      >= 0.4.7
    , tagged               >= 0.4.4
    , time                 >= 1.4
    , text                 >= 0.11.2
    , transformers         >= 0.2.2
    , transformers-base    >= 0.4.1
    , unordered-containers >= 0.2.3.0
    , yaml                 >= 0.8.1.1
  exposed-modules:
    Git.GitHub

Test-suite smoke
  default-language: Haskell98
  type: exitcode-stdio-1.0
  main-is: Smoke.hs
  hs-source-dirs: test
  build-depends:
      base >=3
    , gitlib
    , gitlib-utils
    , gitlib-test
    , gitlib-github
    , HUnit              >= 1.2.5
    , hspec              >= 1.4.4
    , hspec-expectations >= 0.3
    , system-filepath    >= 0.4.7
    , text               >= 0.11.2
    , transformers       >= 0.2.2
