Name:                gitlib-lens
Version:             2.0.0.0
Synopsis:            Lenses for working with gitlib more conveniently
License-file:        LICENSE
License:             MIT
Author:              John Wiegley
Maintainer:          johnw@fpcomplete.com
Build-Type:          Simple
Cabal-Version:       >=1.10
Category:            FFI
Description:
  @gitlib-lens@ makes several lenses available for making typical usage
  patterns easier to express.

Source-repository head
  type: git
  location: git://github.com/fpco/gitlib.git

Library
    default-language:   Haskell98
    ghc-options: -Wall
    build-depends:
          base                 >= 3 && < 5
        , lens                 >= 3.9.0.2
        -- , binary               >= 0.5.1.0
        -- , bytestring           >= 0.9.2.1
        -- , conduit              >= 1.0.0
        -- , containers           >= 0.4.2.1
        -- , data-default         >= 0.5.0
        -- , failure              >= 0.2.0.1
        -- , hashable             >= 1.1.2.5
        -- , lifted-base          >= 0.2
        -- , system-fileio        >= 0.3.11
        -- , system-filepath      >= 0.4.7
        -- , tagged               >= 0.2.3.1
        -- , text                 >= 0.11.2
        -- , time                 >= 1.4
        -- , transformers         >= 0.3.0.0
        -- , unordered-containers >= 0.2.3.0
    exposed-modules:
        Git.Lens
    default-extensions: 
        ConstraintKinds
        DeriveDataTypeable
        FlexibleContexts
        OverloadedStrings
        RankNTypes
        TypeFamilies
        ViewPatterns
