Name:                gitlib-lens
Version:             3.1.0
Synopsis:            Lenses for working with gitlib more conveniently
License-file:        LICENSE
License:             MIT
Author:              John Wiegley
Maintainer:          johnw@newartisans.com
Build-Type:          Simple
Cabal-Version:       >=1.10
Category:            FFI
Description:
  @gitlib-lens@ makes several lenses available for making typical usage
  patterns easier to express.

Source-repository head
  type: git
  location: git://github.com/jwiegley/gitlib.git

Library
    default-language:   Haskell98
    ghc-options: -Wall
    build-depends:
          base                 >= 3 && < 5
        , gitlib               >= 3.0.0
        , bytestring
        , containers
        , lens                 >= 4.0
        , tagged
        , template-haskell
        , text
        , unordered-containers
    exposed-modules:
        Git.Lens
    default-extensions: 
        ConstraintKinds
        DeriveDataTypeable
        FlexibleContexts
        OverloadedStrings
        RankNTypes
        TypeFamilies
        ViewPatterns

Test-suite smoke
    Default-language: Haskell98
    ghc-options: -Wall
    Type: exitcode-stdio-1.0
    Main-is: Main.hs
    Hs-source-dirs: test
    Build-depends: 
          base >=3
        , gitlib             >= 3.0.0
        , gitlib-lens        >= 3.0.0
        , gitlib-libgit2     >= 3.0.0
        , HUnit              >= 1.2.5
        , hspec              >= 1.4.4
        , hspec-expectations >= 0.3
        , lens               >= 4.0
        , time
        , transformers
