Name:                gitlib-libgit2
Version:             2.0.1.0
Synopsis:            Libgit2 backend for gitlib
License-file:        LICENSE
License:             MIT
Author:              John Wiegley
Maintainer:          johnw@fpcomplete.com
Build-Type:          Simple
Cabal-Version:       >=1.10
Category:            FFI
Description:
  Libgit2 (<http://libgit2.github.com>) backend for @gitlib@.

Source-repository head
  type: git
  location: git://github.com/fpco/gitlib.git

Test-suite smoke
    Default-language: Haskell98
    ghc-options: -Wall
    Type: exitcode-stdio-1.0
    Main-is: Smoke.hs
    Hs-source-dirs: test
    Build-depends: 
          base >=3
        , gitlib             >= 2.0.1.0
        , gitlib-test        >= 2.0.0.0
        , gitlib-libgit2     >= 2.0.1.0
        , HUnit              >= 1.2.5
        , hspec              >= 1.4.4
        , hspec-expectations >= 0.3

Library
    default-language:   Haskell98
    default-extensions: ForeignFunctionInterface
    ghc-options: -Wall
    build-depends:
          base                 >= 3 && < 5
        , gitlib               >= 2.0.1.0
        , hlibgit2             >= 0.18.0.7
        , attempt              >= 0.4.0
        , binary               >= 0.5.1.0
        , bytestring           >= 0.9.2.1
        , base16-bytestring    >= 0.1.1.5
        , conduit              >= 0.5.5
        , containers           >= 0.4.2
        , data-default         >= 0.5.0
        , directory            >= 1.1.0.2
        , failure              >= 0.2.0.1
        , hashable             >= 1.1.2.5
        , hex                  >= 0.1.2
        , lifted-base          >= 0.2.0.2
        , missing-foreign      >= 0.1.1
        , monad-control        >= 0.3.2
        , monad-loops          >= 0.3.3.0
        , parallel-io          >= 0.3.2.1
        , pointless-fun        >= 1.1.0.1
        , resourcet            >= 0.4.6
        , system-fileio        >= 0.3.9
        , system-filepath      >= 0.4.7
        , tagged               >= 0.2.3.1
        , text                 >= 0.11.2
        , text-icu             >= 0.6.3
        , temporary            >= 1.1.2.4
        , time                 >= 1.4
        , transformers         >= 0.3.0.0
        , transformers-base    >= 0.4.1
        , unordered-containers >= 0.2.3
    exposed-modules:
        Git.Libgit2
        Git.Libgit2.Backend
        Git.Libgit2.Internal
        Git.Libgit2.Trace
        Git.Libgit2.Types
